syntax = "proto3";
package preprocess;

option go_package = "github.com/infobloxopen/protoc-gen-preprocess/options;preprocess";

import "google/protobuf/descriptor.proto";

// Message level options
extend google.protobuf.MessageOptions{
    PreprocessMessageOptions message = 11110;
    PreprocessFieldOptions each = 11111;
}

message PreprocessMessageOptions {
    string prefunction = 1;
    string postfunction = 2;
}

// Field level options
extend google.protobuf.FieldOptions {
    PreprocessFieldOptions field = 11112;
}

message PreprocessFieldOptions {
    PreprocessString string = 1;
}

message PreprocessString {
    enum Methods {
        none = 0;
        trim = 1;
        upper = 2;
        lower = 3;
        clear = 4;
    }
    repeated Methods methods = 1;
}
